# IsItBadRust

./: .gitignore  Cargo.toml
src/: main.rs
src/assets/: style.css  style.css.map  style.scss
src/components/: ipentry.rs  langaugefiles.rs  mod.rs  navbar.rs
src/pages/: home.rs  ipresult.rs  mod.rs
src/utils/: antivpn.rs  mod.rs
