[package]
name = "is_it_bad_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
dioxus-bulma = {git = "https://github.com/funkemunky/dioxus-bulma.git", branch = "main"}
dioxus-logger = "0.4.1"
log = "0.4.20"
