[package]
name = "is_it_bad_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
dioxus-bulma = {git = "https://github.com/funkemunky/dioxus-bulma.git", branch = "main"}
dioxus-logger = "0.4.1"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
gloo-net = {version = "0.4.0", features = ["http", "serde_json", "serde"]}
url = "2.4.1"
dioxus-router = "0.4.0"
